# auto_image_report

./: .gitignore  CHANGELOG.md  README.md  auto_image_report.py  inno_build_script.iss  manual.md  pyproject.toml  resources.py  resources_rc.py  template.docx  xml_parse.md
QT_file/: AboutWindow.ui  MainWindow.ui
app/: AboutUI.py  CheckUI.py  CustomWidgets.py  MainUI.py  ManualUI.py  controller.py
