[tool.poetry]
name = "auto-image-report"
version = "0.1.0"
description = ""
authors = ["scbmark <Twilight3847@skiff.com>"]
readme = "README.md"
packages = [{include = "auto_image_report"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-docx = "^0.8.11"
pillow = "^10.0.0"
filetype = "^1.2.0"
pyside6 = "^6.5.2"
certifi = "^2023.7.22"
pyqtdarktheme = "^2.1.0"


[tool.poetry.group.dev.dependencies]
nuitka = "^1.7.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
